@@ -9,6 +9,7 @@ Core - General
   - New ajaxy help
   - UI Review trough many admin pages
   - New jquery based page selector.
+  - Improved and documented htaccess.txt file
 
 Core - Bug Reports
   -
